Fixed parsing multiple packets in one stream * Added Handshake Packet parsing logic * Added loop to keep connection open

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_subdirectory(networking)
 
+add_compile_options(-fmessage-length=80 -fno-diagnostics-show-option
+-fstack-protector-all -g -O3 -Walloc-zero -Walloca
+-Wduplicated-cond -Wduplicated-branches
+-Werror -Wfatal-errors -Winit-self -Wlogical-op
+-Wshadow -Wunused-const-variable=1)
 add_executable(${PROJECT_NAME} main.c)
 
 target_link_libraries(${PROJECT_NAME} networking)
