--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(networking)
+add_subdirectory(packets)
 
 add_compile_options(-fmessage-length=80 -fno-diagnostics-show-option
 -fstack-protector-all -g -O3 -Walloc-zero -Walloca
@@ -8,3 +9,5 @@ add_compile_options(-fmessage-length=80 -fno-diagnostics-show-option
 add_executable(${PROJECT_NAME} main.c)
 
 target_link_libraries(${PROJECT_NAME} networking)
+target_link_libraries(${PROJECT_NAME} serverbound_packets)
+target_link_libraries(${PROJECT_NAME} clientbound_packets)
