--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Eon-Server VERSION 0.1.0 LANGUAGES C)
 
-add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+add_compile_options(-g3 -Wall -Wextra -Wpedantic -Werror)
 
 add_subdirectory(src)
 
